--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Jesus Children Missions Outreach</title>
+    <title>Jesus Children Missions Outreachz</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -13,5 +13,7 @@
   </head>
   <body>
     <app-root></app-root>
+
+    <script src="https://kwes.io/js/kwes.js"></script>
   </body>
 </html>
