--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <body>
     <app-root></app-root>
 
-    <script src="https://kwes.io/js/kwes.js"></script>
+    <!-- <script src="https://kwes.io/js/kwes.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   </body>
 </html>
